# eva

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/: main.py
src/eva/: __init__.py  account_updates.py  app.py  cli.py  config.py  constants.py  logging.py  runtime.py  windows_tray.py
src/eva/ai/: __init__.py  account_updates.py  client.py  orchestrator.py  parsing.py  respond.py  schemas.py  splitting.py  summarize.py
src/eva/discord/: __init__.py  account_updates.py  clear_commands.py  client.py  code_attachments.py  command_outcome.py  (+12 more)
tests/unit/: test_account_update_handler.py  test_account_updates.py  test_ai_reminder_routing.py  test_clear_commands.py  test_cli_settings.py  test_code_attachments.py  test_config.py  test_context.py  test_delivery.py  test_download_commands.py  test_download_service.py  test_environment_prompt.py  test_formatting.py  test_handler_delivery.py  test_handlers.py  test_history.py  test_image_client.py  test_image_detector.py  test_image_service.py  test_main.py  test_memory_commands.py  test_prompts.py  test_rate_limiter.py  test_reminder_commands.py  test_reminder_detector.py  test_reminder_parser.py  test_reminder_runner.py  test_reminder_scheduler.py  test_reminder_store.py  test_reply_generation.py  test_response_service.py  test_runtime.py  test_search_client.py  test_search_detector.py  test_search_query_builder.py  test_search_response_service.py  test_split_service.py  test_summarize.py  test_terminal_commands.py  test_terminal_service.py  (+7 more)
(+44 files in other folders)
