[project]
name = "eva"
version = "0.1.0"
description = "shitty ai selfbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "discord-py-self>=2.1.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
eva = "main:main"
lint = "eva.cli:run_lint"
tests = "eva.cli:run_tests"
build = "eva.cli:run_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "nuitka>=2.5.4",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
